fix wrong size of employer link + add lonnskalkulator

--- a/next/src/components/EmployeeImageLink.less
+++ b/next/src/components/EmployeeImageLink.less
@@ -1,23 +1,25 @@
 @import '../layouts/colors';
 
 .employee-image-link {
-    width: 100%;
-    height: 100%;
-    max-width: 300px;
     margin: 0 10px 50px 10px;
+    max-width: 300px;
     text-decoration: none;
-    background-image: radial-gradient(
-        circle at 50% 120px,
-        #333 20%,
-        transparent 200%
-    );
+    background: #666464;
+
+    &:hover {
+        outline-offset: 3px;
+        outline: 3px solid #c5d200;
+    }
 
     img {
+        width: 300px;
+        height: 300px;
+        mask-image: radial-gradient(
+            circle at 50% 30%,
+            #333 0%,
+            transparent 300%
+        );
         border: none;
-        mask-image: radial-gradient(#333 0%, transparent 300%);
-        width: 100%;
-        height: 100%;
-        max-height: 300px;
     }
 
     &__text-container {
